Remove DCHECK from ToIntegerMilliseconds()

The DCHECK was reported to be hit in Chrome OS. This may be related to new use
cases of the method or broken timestamps.

Bug: 892751
Change-Id: I4b9ace1aeeefa8467f42e78539b0fa286ee7c4e5
Reviewed-on: https://chromium-review.googlesource.com/c/1265905
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Nicolás Peña Moreno <npm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598033}