third_party/blink/renderer/core/timing/performance_timing.cc
@@ -50,7 +50,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace blink {
 
 static unsigned long long ToIntegerMilliseconds(TimeDelta duration) {
-  DCHECK_GE(duration, TimeDelta());
+  // TODO(npm): add histograms to understand when/why |duration| is sometimes
+  // negative.
   double clamped_seconds =
       Performance::ClampTimeResolution(duration.InSecondsF());
   return static_cast<unsigned long long>(clamped_seconds * 1000.0);
